<resources>
    <string name="app_name">MyFinances</string>
    <string name="dollar_amount">$%1$,.2f</string>
    <string name="zerodollar_hint">0.00</string>
    <string name="account_number_hint">##########</string>
    <string name="account_type">Account Type</string>
    <string name="save">Save</string>
    <string name="interest_rate">Interest Rate:</string>
    <string name="cancel">Cancel</string>
    <string name="account_type_cd">CD</string>
    <string name="account_type_checking">Checking</string>
    <string name="account_type_loan">Loan</string>
    <string name="initial_balance">Initial Balance:</string>
    <string name="payment_amount">Payment Amount:</string>
    <string name="current_balance">Current Balance:</string>
    <string name="account_number">Account Number:</string>
    <string name="success_message">The %1s account %2s was saved as record ID %3d</string>
    <string name="success_title">Success</string>
    <string name="failure_message">The finance record failed to save!</string>
    <string name="failure_title">Failure</string>
</resources>