<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/account_type"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <RadioGroup
        android:id="@+id/radioGroupAccountType"
        android:layout_width="357dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccountType">

        <RadioButton
            android:id="@+id/radioCD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cd"
            android:textSize="@dimen/prompt_text_size" />

        <RadioButton
            android:id="@+id/radioLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loan"
            android:textSize="@dimen/prompt_text_size" />

        <RadioButton
            android:id="@+id/radioChecking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checking"
            android:textSize="@dimen/prompt_text_size" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/account_number"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/editAccountNumber"
        app:layout_constraintEnd_toStartOf="@+id/editAccountNumber"
        app:layout_constraintTop_toTopOf="@+id/editAccountNumber" />

    <EditText
        android:id="@+id/editAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/account_number_hint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAccountType" />

    <TextView
        android:id="@+id/textInitialBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/initial_balance"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/editInitialBalance"
        app:layout_constraintEnd_toStartOf="@+id/editInitialBalance"
        app:layout_constraintTop_toTopOf="@+id/editInitialBalance" />

    <EditText
        android:id="@+id/editInitialBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:textSize="@dimen/prompt_text_size"
        android:hint="@string/zerodollar_hint"
        app:layout_constraintStart_toStartOf="@+id/editAccountNumber"
        app:layout_constraintTop_toBottomOf="@+id/editAccountNumber"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/current_balance"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/editCurrentBalance"
        app:layout_constraintEnd_toStartOf="@+id/editCurrentBalance"
        app:layout_constraintTop_toTopOf="@+id/editCurrentBalance" />

    <EditText
        android:id="@+id/editCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:textSize="@dimen/prompt_text_size"
        android:hint="@string/zerodollar_hint"
        app:layout_constraintStart_toStartOf="@+id/editInitialBalance"
        app:layout_constraintTop_toBottomOf="@+id/editInitialBalance"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/payment_amount"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/editPaymentAmount"
        app:layout_constraintEnd_toStartOf="@+id/editPaymentAmount"
        app:layout_constraintTop_toTopOf="@+id/editPaymentAmount" />

    <EditText
        android:id="@+id/editPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:textSize="@dimen/prompt_text_size"
        android:hint="@string/zerodollar_hint"
        app:layout_constraintStart_toStartOf="@+id/editCurrentBalance"
        app:layout_constraintTop_toBottomOf="@+id/editCurrentBalance"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/interest_rate"
        android:textSize="@dimen/prompt_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/editInterestRate"
        app:layout_constraintEnd_toStartOf="@+id/editInterestRate"
        app:layout_constraintTop_toTopOf="@+id/editInterestRate" />

    <EditText
        android:id="@+id/editInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:textSize="@dimen/prompt_text_size"
        android:hint="@string/zerodollar_hint"
        app:layout_constraintStart_toStartOf="@+id/editPaymentAmount"
        app:layout_constraintTop_toBottomOf="@+id/editPaymentAmount" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/save"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInterestRate" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/cancel"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/editInterestRate" />

</androidx.constraintlayout.widget.ConstraintLayout>